--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6425ba8394.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-[#f5fff6] mx-auto">
+<body class="bg-green-50 mx-auto">
     <!-- header section -->
-    <header class="flex justify-between items-center my-3 mx-4 md:my-2 md:mx-4">
+    <header class="flex justify-between items-center mb-3 pt-3 mx-4 md:mb-4 md:mx-10 md:pt-4">
         <div class="flex justify-center items-center gap-1">
             <img class="w-10 md:w-7" src="./assets/logo.png" alt="">
             <h3 class="font-bold text-[#006747] text-xs">Emergency <br>Service</h3>
         </div>
         <div class="flex gap-1">
-            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2 md:w-12 md:h-6">
+            <div class="flex justify-center items-center gap-1 bg-green-200 w-16 h-8 rounded-2xl p-2 md:w-12 md:h-6">
                 <p class="font-bold text-xs"><span id="heart-count">0</span>❤️</p>
             </div>
-            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2 md:w-14 md:h-6">
+            <div class="flex justify-center items-center gap-1 bg-green-200 w-16 h-8 rounded-2xl p-2 md:w-14 md:h-6">
                 <p class="font-bold text-xs"><span id="coin-count">100</span>🪙</p>
             </div>
-            <div class="flex justify-center items-center gap-1 bg-green-500 w-18 h-8 rounded-2xl text-white p-2 md:w-14 md:h-6">
+            <div class="flex justify-center items-center gap-1 bg-green-600 w-18 h-8 rounded-2xl text-white p-2 md:w-14 md:h-6">
                 <p class="font-semibold text-center text-xs"><span id="copy-count" class="mr-1">0</span>COPY</p>
             </div>          
         </div>
     </header>
    <main>
     <!-- banner section -->
-     <div class="bg-[linear-gradient(90deg,#013223,#006747,#013223)] text-center">
+     <div class="bg-[linear-gradient(90deg,#013223,#006747,#013223)] text-center md:py-3">
             <div class="flex justify-center items-center pt-5"><img class="w-16" src="./assets/logo-dark.png" alt=""></div>
             <h2 class="text-white font-bold text-lg">Emergency Service Directory</h2>
             <h5 class="text-white font-semibold text-xs pb-5">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
@@ -51,7 +51,7 @@
                    <h2 class="font-bold mt-1 mb-1 text-xl hotline">999</h2>
                    <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
                   <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -65,7 +65,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">999</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Police</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -79,7 +79,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">999</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Fire</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy "></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>                                       
@@ -95,7 +95,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">194-999</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -109,7 +109,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">109</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -123,7 +123,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">106</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy "></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>                                        
@@ -139,7 +139,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">163</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Rail</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -153,7 +153,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">16445</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Brac</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
@@ -167,7 +167,7 @@
                 <h2 class="font-bold mt-1 mb-1 text-xl hotline">16216</h2>
                 <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
                  <div class="flex justify-evenly gap-2">
-                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2 copy-btn bg-gray-200"><i class="fa-regular fa-copy "></i>Copy</button>
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>                                        
@@ -176,8 +176,8 @@
         <!-- call history -->
         <aside  class="bg-white rounded-xl shadow-sm col-span-3">
             <div class="md:flex md:justify-between md:items-center">
-                 <h3 class="font-bold text-xs text-center pt-3 md:pl-3"><i class="fa-regular fa-clock"></i> Call History</h3>
-               <button id="clear-btn" class="w-12 h-6 bg-green-700 rounded-xl text-white text-xs mt-3 ml-4 md:mr-2">Clear</button>
+                 <h3 class="font-bold text-xs text-center pt-3 md:pl-3 md:text-lg"><i class="fa-regular fa-clock"></i>  Call History</h3>
+                 <button id="clear-btn" class="bg-green-700 w-12 h-6 text-white text-xs rounded-xl ml-4 mt-2 md:mr-3 md:font-semibold md:w-16 md:h-8">Clear</button>
             </div>
             <div id="call-history" >
                <ul class="mt-2 text-xs ml-3 md:text-[10px] font-bold md:text-center mt-3"></ul>
